[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "strhub"
version = "1.2.0"
description = "Scene Text Recognition Model Hub: A collection of deep learning models for Scene Text Recognition"
authors = [
  {name = "Darwin Bautista", email = "baudm@users.noreply.github.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]

[project.urls]
Homepage = "https://github.com/baudm/parseq"

[tool.setuptools]
packages = ["strhub"]
license-files = ["NOTICE", "LICENSE", "strhub/models/*/LICENSE"]

[tool.setuptools.dynamic]
optional-dependencies.train = { file = ["requirements/train.txt"] }
optional-dependencies.test = { file = ["requirements/test.txt"] }
optional-dependencies.bench = { file = ["requirements/bench.txt"] }
optional-dependencies.tune = { file = ["requirements/tune.txt"] }

[tool.pyink]
line-length = 120
pyink-use-majority-quotes = true

[tool.isort]
py_version = "auto"
profile = "django"
line_length = 120
ignore_comments = true  # To clear unused fmt: skip comments
known_torch = ["torch", "torchvision"]
known_torchlibs = ["timm", "pytorch_lightning"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "TORCH", "TORCHLIBS", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
fix = true
show-fixes = true
line-length = 120
output-format = "grouped"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
